modified error chapter

--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -570,7 +570,7 @@ Data-field covariance & $[\mathbf{c}]_{i}=\signal^{2} c(\mathbf{r},\mathbf{r_{i}
 %---------------------------------------------------------------
 
 GCV allows estimating global errors and calibration of the correlation length $L$ and the signal-to-noise ratio $\snr=\frac{\signal^{2}}{\noise^{2}}$.
-The method consists in setting one or several data aside and perform an analysis in order to obtain a global error estimate. GCV applies analysis to random anomalies at the same locations as real data. A detailed description of the method is provided in Chap. \ref{gcv}.
+The method consists in setting one or several data aside and perform an analysis in order to obtain a global error estimate. GCV applies analysis to random anomalies at the same locations as real data. A detailed description of the method is provided in Chap.~\ref{gcv}.
 
  
 \subsection{Advection constraint}
