--- a/19-DivaLinks.tex
+++ b/19-DivaLinks.tex
@@ -7,18 +7,18 @@
 
 \begin{itemize}
 
-\item[\raisebox{-3mm}{\includegraphics[height=1cm]{seadatanetico}}] \begin{minipage}{12cm}
+\item[\raisebox{-3mm}{\includegraphics[height=1cm]{Logo_SeaDataNet_fond_transparent}}] \begin{minipage}{12cm}
 SeaDataNet Home Page\\
 \url{http://www.seadatanet.org/}
 \end{minipage}
 
 \item[\raisebox{-4mm}{\includegraphics[height=1cm]{divaico}}] \begin{minipage}{12cm}
 \diva\, Home Page\\
-\url{http://modb.oce.ulg.ac.be/modb/diva.html}
+\url{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA}
 \end{minipage}
 
 \item[\raisebox{-3mm}{\includegraphics[height=1cm]{gherico}}] \begin{minipage}{12cm}
-\gher\, Home Page\\
+GHER Home Page\\
 \url{http://modb.oce.ulg.ac.be/}
 \end{minipage}
 
@@ -32,10 +32,10 @@ NetCDF\\
 \url{http://www.unidata.ucar.edu/software/netcdf/}
 \end{minipage}
 
-\item[\raisebox{-4mm}{\includegraphics[height=1cm]{tclico}}] \begin{minipage}{12cm}
-\tcltk\\
-\url{http://www.tcl.tk/}
-\end{minipage}
+%\item[\raisebox{-4mm}{\includegraphics[height=1cm]{tclico}}] \begin{minipage}{12cm}
+%\tcltk\\
+%\url{http://www.tcl.tk/}
+%\end{minipage}
 
 %\item[]PlPlot\\
 %\url{http://plplot.sourceforge.net/}
