--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -11,14 +11,14 @@
 
 
 \vspace{.25cm}
-\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \texttt{JRA4} activities. \diva is copyright $\copyright$  2006-2012 by the \gher group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html}
+\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \texttt{JRA4} activities. \diva is copyright $\copyright$  2006-2012 by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html}
 
 In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{http://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{http://www.gnu.org/copyleft/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
 
 If you want to integrate \diva into a closed-source software, or want to sell a modified closed-source version of \diva, please contact us in person. You can purchase a version of \diva under a different license, with \textit{no strings attached} (for example allowing you to take parts of \diva and integrate them into your own proprietary code).
 
 \vspace{.25cm}
-All SeaDataNet products (data and softwares) are freely distributed to the scientific community at the following conditions: 
+All SeaDataNet products (data and software) are freely distributed to the scientific community at the following conditions: 
 
 \begin{description}
 \item[\checkmark] The products should be used for scientific purposes only.
