--- a/18-divademecum.tex
+++ b/18-divademecum.tex
@@ -1,70 +1,9 @@
-
-\documentclass[8pt,a4paper,notitlepage]{book}
-\usepackage{array,amsmath}
-
-
-
-\usepackage{pstricks,pst-node,pst-text,pst-3d,pst-grad}
-\usepackage[dvips]{graphicx}
-\usepackage{psfrag}
-\usepackage{xspace}
-\usepackage{float}
-\usepackage{verbatim}
-
-\usepackage{multicol}
-\usepackage{calc}
-
-%\usepackage{import}
-
-%\usepackage{nicefrac}
-
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{times}
-\usepackage{shadow}
-\usepackage{pifont}
-\usepackage{color}
-\usepackage[dvips]{hyperref}
-%\usepackage{prettyref}
-%\usepackage[small,hang]{caption2}
-%\usepackage{caption2}
-%\usepackage{cancel}
-%\usepackage{hanging}
-\usepackage{rotating}
-\usepackage{latexsub}
-%\usepackage{nomencl}
-%\usepackage{makeidx%
-%,showidx
-%to show where indexes are defined, just use showidx
-%}
-
-\DeclareFixedFont{\petitefonte}{\encodingdefault}%
-{\familydefault}{\seriesdefault}{\shapedefault}{6pt}
-\newcommand{\petit}{\petitefonte}
-
-\usepackage{curves}
-
-\usepackage{textcomp}
-
-\usepackage{bez123}
-
-\newcommand{\LaTeXPiX}[3]{
-                          \begin{sidewaysfigure*}[ht]
-                             \begin{center}
-                             {\small{
-                                \input{#1.eepic}
-                                \caption{#2
-                                \label{#3}}
-                                }}
-                             \end{center}
-                          \end{sidewaysfigure*}
                          }
-\usepackage{geometry}
-\geometry{scale=.9, nohead}
+%\usepackage{geometry}
+%\geometry{scale=.9, nohead}
 
 
-\begin{document}
-
+\chapter{VADEMECUM}
 \pagestyle{empty}
 \thispagestyle{empty}
 \vspace{-6cm}
@@ -638,4 +577,3 @@ Correlation length (in degrees latitude)
 \end{minipage}
 
 \end{multicols}
-\end{document}
